# opie

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Changes  Makefile  Makefile.test  Makefile.x11  README  README.NEWBUILD  README.OE  Rules.make  Vars.make  addLanguage.sh  config.in  config.in.in  configure  dependencies.in  gen.pro  include.pro  mkipks  opie-release-1.0.config  packages
apps/: .cvsignore  .directory  .qde_menu.conf  .qpe_menu.conf  __7separator.desktop  __9quit.desktop
configs/: fix_linker  freebsd-g++-shared  freebsd-g++-shared-debug  freebsd-g++-static  freebsd-g++-static-debug  linux-arm-g++-shared  linux-arm-g++-shared-debug  linux-arm-g++-sharedx11  linux-arm-g++-static  linux-arm-g++-static-debug  linux-cassiopeia-g++-shared  linux-cassiopeia-g++-shared-debug  linux-cassiopeia-g++-static  linux-cassiopeia-g++-static-debug  linux-generic-g++-shared  linux-generic-g++-shared-debug  linux-generic-g++-sharedx11  linux-generic-g++-static  linux-ipaq-g++-optimized-shared  linux-ipaq-g++-shared  linux-ipaq-g++-shared-debug  linux-ipaq-g++-static  linux-ipaq-g++-static-debug  linux-mips-g++-shared  linux-mips-g++-shared-debug  linux-mips-g++-static  linux-mips-g++-static-debug  linux-sh3-g++-shared  linux-sh3-g++-shared-debug  linux-sh3-g++-static  linux-sh3-g++-static-debug  linux-sharp-g++-shared  linux-sharp-g++-shared-debug  linux-sharp-g++-static  linux-sharp-g++-static-debug  linux-x86-g++-shared  linux-x86-g++-static  linux-x86-g++-static-debug
core/: .cvsignore  .gitignore  config.in.in
def-configs/: opie  opie-x11
development/: OpiePIM.kpr  README  create_html_docu  cvs_add_html_skeleton  cvs_add_translation  cvsbook.html  opie-1.0-features.html  opie-1.mrproject  pingizauru-transparent.xcf  sort_desktop_files.pl
doc/: Doxyfile_core2  Doxyfile_db2  Doxyfile_libopie  Doxyfile_libqpe  Doxyfile_main  Doxyfile_mm2  Doxyfile_net  Doxyfile_net2  Doxyfile_pim  Doxyfile_pim2  Doxyfile_ui2  Mainpage.dox  README  generate_apidox
docs/: .cvsignore  Opie_Handheld_Links.html  README  beauty.html  copying.html  customization.html  developing.html  features.html  i18n.html  index.html  indices.doc  inputmethodinterface.doc  opieplayer2_skins_en.txt  pointing.html  portability.html  qcop.doc  qt-embedded.html  size.html  source.html  start.doc  support.html  time.html  what.html  writing-handwriting.html  writing-keyboard.html  writing-opti.html  writing-pickboard.html  writing-unicode.html  writing.html
etc/: .cvsignore  .gitignore  filebrowserdb  ipkg.conf  manufacturers  mime.types  ntpservers  opie-keytabs.control  opie-pcmcia.rules  opie-pcmcia.sh  opie_sysevents.conf
example/: README  config.in  example.control  example.desktop  example.pro  ntp.cpp  ntp.h  ntpbase.ui
examples/: COMMON_ERRORS  LICENSE  README  config.in  config.in.in  example.pro  exampleboardimpl.cpp  exampleboardimpl.h  examples.pro
freetype/: .cvsignore  Makefile.in  config.in  fontfactoryttf_qws.cpp  fontfactoryttf_qws.h  freetype.pro  freetypefactoryimpl.cpp  freetypefactoryimpl.h  opie-freetype.control  qfontdata_p.h
help/: sheetqt.html
i18n/: ADD  carsten  opie-i18n-da.control  opie-i18n-de.control  opie-i18n-en.control  opie-i18n-es.control  opie-i18n-fr.control  opie-i18n-hu.control  opie-i18n-it.control  opie-i18n-ja.control  opie-i18n-ko.control  opie-i18n-lv.control  opie-i18n-mk.control  opie-i18n-nl.control  opie-i18n-no.control  opie-i18n-pl.control  opie-i18n-pt-br.control  opie-i18n-pt.control  opie-i18n-ptbr.control  opie-i18n-ru.control  opie-i18n-sl.control  opie-i18n-xx.control  opie-i18n-zh-cn.control  opie-i18n-zh-tw.control  qpe-i18n-de.control  qpe-i18n-en.control  qpe-i18n-hu.control  qpe-i18n-ja.control  qpe-i18n-ko.control  status.sh  (+4 more)
libdbus-qt2/: .gitignore  AUTHORS  COPYING  COPYING.AFL  ChangeLog  INSTALL  Makefile.am  README  TODO  config.in  configure.in.in  dbus-1-qt3.pc.in  dbus-qt2.pc.in  libdbus-qt2.pro  libdbus-qt3.pro  qdbusatomic.h  qdbusconnection.cpp  qdbusconnection_p.h  qdbusdata.cpp  qdbusdataconverter.cpp  qdbusdatalist.cpp  qdbuserror.cpp  qdbusintegrator.cpp  qdbusmarshall.cpp  qdbusmarshall.h  qdbusmessage.cpp  qdbusmessage_p.h  qdbusobjectpath.cpp  qdbusproxy.cpp  qdbusserver.cpp  qdestroyedsignalconnector.h
libdbus-qt2/dbus/: qdbusconnection.h  qdbusdata.h  qdbusdataconverter.h  qdbusdatalist.h  qdbusdatamap.h  qdbuserror.h  qdbusmacros.h  qdbusmessage.h  qdbusobject.h  qdbusobjectpath.h  qdbusproxy.h  qdbusserver.h  qdbusvariant.h
libdbus-qt2/docs/: doxygen.conf
libdbus-qt2/examples/: .gitignore  example-client.cpp  example-client.h  example-client.pro  example-service.cpp  example-service.h  example-service.pro
libdbus-qt2/test/cross-test/: Makefile  crosstest-client.cpp  crosstest-client.h  crosstest-client.pro  crosstest-server.cpp  crosstest-server.h  crosstest-server.pro  interfaceimpls.cpp  interfaceimpls.h  test-introspect.xml
libdbus-qt2/tools/dbusxml2qt2/: classgen.cpp  classgen.h  dbusxml2qt2.pro  main.cpp  methodgen.cpp
libdbus-qt2/tools/dbusxml2qt3/: classgen.cpp  dbusxml2qt3.pro  main.cpp  methodgen.cpp  methodgen.h
noncore/games/kbill/: .cvsignore  .gitignore  Bucket.cc  Bucket.h  Cable.cc  Cable.h  Computer.cc  Computer.h  Game.cc  Game.h  Horde.cc  Horde.h  Library.cc  Library.h  MCursor.cc  MCursor.h  Makefile  Makefile.am  Makefile.in  Monster.cc  Monster.h  Network.cc  Network.h  Picture.cc  Picture.h  Scorelist.cc  Scorelist.h  Spark.cc  Spark.h  Strings.h  UI.cpp  UI.h  config.in  field.cpp  field.h  helpdialog.ui  inputbox.cpp  inputbox.h  kbill.cpp  kbill.h  (+4 more)
pics/kbill/bitmaps/: Makefile  Makefile.am  Makefile.in  apple.xbm  hurd.xbm  linux.xbm  next.xbm  os2.xbm  sgi.xbm  sun.xbm
pics/kbill/pixmaps/: Makefile  Makefile.am  Makefile.in  about.xpm  billA_0.xpm  billA_1.xpm  billA_10.xpm  billA_11.xpm  billA_12.xpm  billA_2.xpm  billA_3.xpm  billA_4.xpm  billA_5.xpm  billA_6.xpm  billA_7.xpm  billA_8.xpm  billA_9.xpm  billD_0.xpm  billD_1.xpm  billL_0.xpm  billL_1.xpm  billL_2.xpm  billR_0.xpm  billR_1.xpm  billR_2.xpm  hurd.xpm  linux.xpm  logo.xpm  os2.xpm  sgi.xpm  sun.xpm  wingdows.xpm
(+11069 files in other folders)
