####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = apple.xbm bsd.xbm bucket.xbm hand_down.xbm hand_down_mask.xbm hand_up.xbm hand_up_mask.xbm hurd.xbm linux.xbm next.xbm os2.xbm redhat.xbm sgi.xbm sun.xbm 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) apple.xbm $(kde_datadir)/kbill/bitmaps/apple.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) bsd.xbm $(kde_datadir)/kbill/bitmaps/bsd.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) bucket.xbm $(kde_datadir)/kbill/bitmaps/bucket.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) hand_down.xbm $(kde_datadir)/kbill/bitmaps/hand_down.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) hand_down_mask.xbm $(kde_datadir)/kbill/bitmaps/hand_down_mask.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) hand_up.xbm $(kde_datadir)/kbill/bitmaps/hand_up.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) hand_up_mask.xbm $(kde_datadir)/kbill/bitmaps/hand_up_mask.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) hurd.xbm $(kde_datadir)/kbill/bitmaps/hurd.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) linux.xbm $(kde_datadir)/kbill/bitmaps/linux.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) next.xbm $(kde_datadir)/kbill/bitmaps/next.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) os2.xbm $(kde_datadir)/kbill/bitmaps/os2.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) redhat.xbm $(kde_datadir)/kbill/bitmaps/redhat.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) sgi.xbm $(kde_datadir)/kbill/bitmaps/sgi.xbm
	$(mkinstalldirs) $(kde_datadir)/kbill/bitmaps/
	$(INSTALL_DATA) sun.xbm $(kde_datadir)/kbill/bitmaps/sun.xbm

uninstall-local:
	-rm -f $(kde_datadir)/kbill/bitmaps/apple.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/bsd.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/bucket.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/hand_down.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/hand_down_mask.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/hand_up.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/hand_up_mask.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/hurd.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/linux.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/next.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/os2.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/redhat.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/sgi.xbm
	-rm -f $(kde_datadir)/kbill/bitmaps/sun.xbm

####### kdevelop will overwrite this part!!! (end)############
