####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = about.xpm apple.xpm billA_0.xpm billA_1.xpm billA_10.xpm billA_11.xpm billA_12.xpm billA_2.xpm billA_3.xpm billA_4.xpm billA_5.xpm billA_6.xpm billA_7.xpm billA_8.xpm billA_9.xpm billD_0.xpm billD_1.xpm billD_2.xpm billD_3.xpm billD_4.xpm billL_0.xpm billL_1.xpm billL_2.xpm billR_0.xpm billR_1.xpm billR_2.xpm bsd.xpm bsdcpu.xpm bucket.xpm hurd.xpm linux.xpm logo.xpm maccpu.xpm next.xpm nextcpu.xpm os2.xpm os2cpu.xpm redhat.xpm sgi.xpm sgicpu.xpm spark_0.xpm spark_1.xpm sun.xpm suncpu.xpm toaster.xpm wingdows.xpm 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) about.xpm $(kde_datadir)/kbill/pixmaps/about.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) apple.xpm $(kde_datadir)/kbill/pixmaps/apple.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_0.xpm $(kde_datadir)/kbill/pixmaps/billA_0.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_1.xpm $(kde_datadir)/kbill/pixmaps/billA_1.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_10.xpm $(kde_datadir)/kbill/pixmaps/billA_10.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_11.xpm $(kde_datadir)/kbill/pixmaps/billA_11.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_12.xpm $(kde_datadir)/kbill/pixmaps/billA_12.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_2.xpm $(kde_datadir)/kbill/pixmaps/billA_2.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_3.xpm $(kde_datadir)/kbill/pixmaps/billA_3.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_4.xpm $(kde_datadir)/kbill/pixmaps/billA_4.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_5.xpm $(kde_datadir)/kbill/pixmaps/billA_5.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_6.xpm $(kde_datadir)/kbill/pixmaps/billA_6.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_7.xpm $(kde_datadir)/kbill/pixmaps/billA_7.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_8.xpm $(kde_datadir)/kbill/pixmaps/billA_8.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billA_9.xpm $(kde_datadir)/kbill/pixmaps/billA_9.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billD_0.xpm $(kde_datadir)/kbill/pixmaps/billD_0.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billD_1.xpm $(kde_datadir)/kbill/pixmaps/billD_1.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billD_2.xpm $(kde_datadir)/kbill/pixmaps/billD_2.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billD_3.xpm $(kde_datadir)/kbill/pixmaps/billD_3.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billD_4.xpm $(kde_datadir)/kbill/pixmaps/billD_4.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billL_0.xpm $(kde_datadir)/kbill/pixmaps/billL_0.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billL_1.xpm $(kde_datadir)/kbill/pixmaps/billL_1.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billL_2.xpm $(kde_datadir)/kbill/pixmaps/billL_2.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billR_0.xpm $(kde_datadir)/kbill/pixmaps/billR_0.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billR_1.xpm $(kde_datadir)/kbill/pixmaps/billR_1.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) billR_2.xpm $(kde_datadir)/kbill/pixmaps/billR_2.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) bsd.xpm $(kde_datadir)/kbill/pixmaps/bsd.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) bsdcpu.xpm $(kde_datadir)/kbill/pixmaps/bsdcpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) bucket.xpm $(kde_datadir)/kbill/pixmaps/bucket.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) hurd.xpm $(kde_datadir)/kbill/pixmaps/hurd.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) linux.xpm $(kde_datadir)/kbill/pixmaps/linux.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) logo.xpm $(kde_datadir)/kbill/pixmaps/logo.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) maccpu.xpm $(kde_datadir)/kbill/pixmaps/maccpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) next.xpm $(kde_datadir)/kbill/pixmaps/next.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) nextcpu.xpm $(kde_datadir)/kbill/pixmaps/nextcpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) os2.xpm $(kde_datadir)/kbill/pixmaps/os2.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) os2cpu.xpm $(kde_datadir)/kbill/pixmaps/os2cpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) redhat.xpm $(kde_datadir)/kbill/pixmaps/redhat.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) sgi.xpm $(kde_datadir)/kbill/pixmaps/sgi.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) sgicpu.xpm $(kde_datadir)/kbill/pixmaps/sgicpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) spark_0.xpm $(kde_datadir)/kbill/pixmaps/spark_0.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) spark_1.xpm $(kde_datadir)/kbill/pixmaps/spark_1.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) sun.xpm $(kde_datadir)/kbill/pixmaps/sun.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) suncpu.xpm $(kde_datadir)/kbill/pixmaps/suncpu.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) toaster.xpm $(kde_datadir)/kbill/pixmaps/toaster.xpm
	$(mkinstalldirs) $(kde_datadir)/kbill/pixmaps/
	$(INSTALL_DATA) wingdows.xpm $(kde_datadir)/kbill/pixmaps/wingdows.xpm

uninstall-local:
	-rm -f $(kde_datadir)/kbill/pixmaps/about.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/apple.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_0.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_1.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_10.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_11.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_12.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_2.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_3.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_4.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_5.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_6.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_7.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_8.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billA_9.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billD_0.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billD_1.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billD_2.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billD_3.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billD_4.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billL_0.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billL_1.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billL_2.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billR_0.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billR_1.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/billR_2.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/bsd.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/bsdcpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/bucket.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/hurd.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/linux.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/logo.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/maccpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/next.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/nextcpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/os2.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/os2cpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/redhat.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/sgi.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/sgicpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/spark_0.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/spark_1.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/sun.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/suncpu.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/toaster.xpm
	-rm -f $(kde_datadir)/kbill/pixmaps/wingdows.xpm

####### kdevelop will overwrite this part!!! (end)############
